<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/category"
        android:icon="@drawable/category"
        android:title="@string/category"
        />
    <item
        android:id="@+id/entrepreneur"
        android:icon="@drawable/entrepreneur"
        android:title="@string/entrepreneur"
        />
    <item
        android:id="@+id/localShop"
        android:icon="@drawable/placeholder"
        android:title="@string/localStore"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        />
</menu>